test/expect/cmd.cc-missing.stderr.txt
^error: '--castxml-cc-gnu' must be followed by a compiler command!

Usage: castxml .*$
